<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".dpx.DropboxActivity">

  <LinearLayout
    android:id="@+id/account_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
      android:id="@+id/name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:padding="8dp" />

    <TextView
      android:id="@+id/email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:padding="8dp" />

    <Button
      android:id="@+id/logout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="16dp"
      android:text="@string/logout" />

    <Button
      android:id="@+id/upload"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end|center_vertical"
      android:text="@string/upload" />

  </LinearLayout>

  <Button
    android:id="@+id/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/login" />

  <TextView
    android:id="@+id/path_view"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:paddingHorizontal="20dp"
    android:paddingVertical="4dp"
    android:textStyle="bold" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/files_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</LinearLayout>